tests/baselines/reference/structConstructorParametersAccessibility2.errors.txt
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility2.ts(5,17): error TS8019: Unexpected token. Parameter of struct constructor cannot be optional.
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility2.ts(9,17): error TS8019: Unexpected token. Parameter of struct constructor cannot be optional.
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility2.ts(13,17): error TS8018: Unexpected token. Modifier Protected cannot appear on struct constructor parameters.
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility2.ts(13,17): error TS8019: Unexpected token. Parameter of struct constructor cannot be optional.


==== tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility2.ts (4 errors) ====
    // doc 3.1
    // optional parameters are not allowed for struct constructor.
    
    struct C1 {
        constructor(public x?: number) { } // error
                    ~~~~~~~~~~~~~~~~~
!!! error TS8019: Unexpected token. Parameter of struct constructor cannot be optional.
    }
    
    struct C2 {
        constructor(private p?: number) { } // error
                    ~~~~~~~~~~~~~~~~~~
!!! error TS8019: Unexpected token. Parameter of struct constructor cannot be optional.
    }
    
    struct C3 {
        constructor(protected p?: number) { } // error
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS8018: Unexpected token. Modifier Protected cannot appear on struct constructor parameters.
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS8019: Unexpected token. Parameter of struct constructor cannot be optional.
    }
    
    struct Derived extends C3 {
        constructor(p: number) {
            super(p);
            this.p; // OK
        }
    }
    